[package]
name = "toggleproxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
asyncio = "0.0.0"
clap = { version = "4.4.11", features = ["derive", "cargo"] }
dirs = "5.0.1"
futures = "0.3.29"
lazy_static = "1.4.0"
log = "0.4.20"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
simple_logger = "4.3.0"
socks5-proto = "0.4.0"
socks5-server = "0.10.0"
tokio = { version = "1.34.0", features = ["full"] }

[target.'cfg(target_os = "linux")'.dependencies]
systemctl = "0.3.1"
